--- a/hoja de vida.html
+++ b/hoja de vida.html
@@ -43,7 +43,7 @@
 
     <section class="perfilprofesional">
         <h2>Perfil profesional</h2>
-            <p>Como estudiante de ingeniería de softwar, estoy dedicado a la creación de soluciones tecnológicas innovadoras. Mi formación técnica sólida y mi capacidad para trabajar en equipo me permiten enfrentar desafíos con confianza. Apasionado por el aprendizaje continuo, estoy comprometido a contribuir con soluciones significativas que impacten positivamente en la sociedad y al mundo.</p>
+            <p>Como estudiante de ingeniería de software, estoy dedicado a la creación de soluciones tecnológicas innovadoras. Mi formación técnica sólida y mi capacidad para trabajar en equipo me permiten enfrentar desafíos con confianza. Apasionado por el aprendizaje continuo, estoy comprometido a contribuir con soluciones significativas que impacten positivamente en la sociedad y al mundo.</p>
     </section>
 </main>
 
