agregando nuevo fondo

--- a/hoja de vida.html
+++ b/hoja de vida.html
@@ -25,7 +25,7 @@
     <section class="datos">
     
         
-        <h2>Datos personales </h2> 
+        <h2>Hola, mi nombre es Gabriel y este es mi portafolio</h2> 
         <img src="fotoperfil.jpg" alt="FOTO PERFIL" width="200px"> 
 
         <ul>
